--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@slack/web-api": "^5.14.0",
     "cors": "^2.8.5",
     "dbus-next": "^0.9.1",
+    "jsqr": "^1.3.1",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
